--- a/.github/workflows/xpost.yaml
+++ b/.github/workflows/xpost.yaml
@@ -15,12 +15,12 @@ jobs:
           notion-db-id: ${{ secrets.NOTION_DB_ID }}
       - name: Print Output Tweet
         id: output-tweet
-        run: echo "${{ steps.test-action.outputs.tweet }}"
+        run: echo "${{ steps.notion-post-fetcher.outputs.tweet }}"
       - name: Post tweet
         id: tweetx
         uses: noweh/post-tweet-v2-action@v1.0
         with:
-          message: ${{ steps.test-action.outputs.tweet }}
+          message: ${{ steps.notion-post-fetcher.outputs.tweet }}
           consumer-key: ${{ secrets.TWITTER_CONSUMER_KEY }}
           consumer-secret: ${{ secrets.TWITTER_CONSUMER_SECRET }}
           access-token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
