--- a/.github/workflows/xpost.yaml
+++ b/.github/workflows/xpost.yaml
@@ -6,11 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to test a post tweet action
     steps:
+      - name: Get current date
+        id: get-date
+        run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
       - name: Notion post fetcher
         id: notion-post-fetcher
         uses: raycast-jp/notion-post-fetcher@v0.0.2
         with:
-          targetDate: "2024-09-03"
+          targetDate: ${{ env.CURRENT_DATE }}
           notion-token: ${{ secrets.NOTION_TOKEN }}
           notion-db-id: ${{ secrets.NOTION_DB_ID }}
       - name: Print Output Tweet
